# SoulJourneyV2.0

./: CALCULATION_VERIFICATION.md  CUSTOM_GPT_INTEGRATION.md  GITHUB_SETUP.md  GIT_SETUP_GUIDE.md  GPT_INTEGRATION_GUIDE.md  NOTION_GPT_TROUBLESHOOTING.md  README.md  SWISS_EPHEMERIS_SETUP.md  VERCEL_DEPLOYMENT_GUIDE.md  YOUR_EXACT_CALCULATION_RESULTS.md  accurate_kp_calculation.py  add-dummy-data.js  advanced_kp_calculator.py  advanced_swiss_ephemeris_demo.py  birth-chart-display.html  chatgpt-actions-schema.json  colombo-chart-display.html  colombo-planetary-display.html  complete_kp_analysis.py  debug_swe.py  demo-login.html  drizzle.config.ts  dynamic_swiss_kp.py  index.html  kp-verification-display.html  kp-verification-screen.html  manual-colombo-chart.html  manual-planetary-positions.html  mock-server.js  notion-gpt-actions-fixed.json  notion-task-creator-simple.json  openapi-spec.json  package-lock.json  package-simple.json  package.json  planetary_calculator.py  push-to-souljourney.sh  pyproject.toml  rasi-chart-mockup.html  replit-setup.sh  (+20 more)
api/: calculate.js  dasha.js  index.js  test.js
attached_assets/: Pasted--Re-import-all-necessary-modules-due-to-code-environment-reset-from-datetime-import-datetime-time-1753499681958_1753499681959.txt  Pasted--Re-import-all-necessary-modules-due-to-code-environment-reset-from-datetime-import-datetime-timede-1756612237397_1756612237397.txt  Pasted--STEP-1-Install-in-Replit-shel-1753512762656_1753512762656.txt  Pasted--openapi-3-1-0-info-title-Soul-Journey-Astrology-API-version-1-0-0-1756617982983_1756617982984.txt  (+5 more)
(+14 files in other folders)
