[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "ephem>=4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyephem>=9.99",
    "pyswisseph>=2.10.3.2",
    "swisseph>=0.0.0.dev1",
]
